feat: removed caseworker ID
